apps/open-webui/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: open-webui
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
  labels:
    app.kubernetes.io/name: open-webui
    pod-security.kubernetes.io/enforce: restricted
